# ChangeLog for dev-java/msv
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/msv/ChangeLog,v 1.10 2006/12/09 09:22:39 flameeyes Exp $

  09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> msv-20050627-r1.ebuild:
  Add ~x86-fbsd keyword.

  30 Nov 2006; Vlastimil Babka <caster@gentoo.org> msv-20050627.ebuild,
  msv-20050627-r1.ebuild:
  Update xerces dep for upcoming 2.6 slotmove.

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> metadata.xml,
  msv-20050627.ebuild, msv-20050627-r1.ebuild:
  Added ~ppc64. Cleaned up description.

  14 Sep 2006; Joshua Nichols <nichoj@gentoo.org> msv-20050627-r1.ebuild:
  Added ~ppc64.

*msv-20050627-r1 (05 Aug 2006)

  05 Aug 2006; Joshua Nichols <nichoj@gentoo.org> +msv-20050627-r1.ebuild:
  Revision bump to support new Java system

  11 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> msv-20050627.ebuild:
  Stable on ppc.

  23 Jan 2006; Joshua Nichols <nichoj@gentoo.org> msv-20050627.ebuild:
  Marked stable on amd64.

  26 Sep 2005; Thomas Matthijs <axxo@gentoo.org> msv-20050627.ebuild:
  keyword x86

  16 Sep 2005; Gustavo Felisberto <humpback@gentoo.org>;
  msv-20050627.ebuild:
  Keyword ~amd64 bug #105520

  01 Jul 2005; David Holm <dholm@gentoo.org> msv-20050627.ebuild:
  Added to ~ppc.

*msv-20050627 (29 Jun 2005)

  29 Jun 2005; Thomas Matthijs <axxo@gentoo.org> +files/build-20050627.xml,
  +metadata.xml, +msv-20050627.ebuild:
  new packages, dep of dom4j, ebuild contributed by Josh Nichols
  <nichoj@alum.rpi.edu>
