@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/xsdlib
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/xsdlib/ChangeLog,v 1.12 2006/12/09 09:27:20 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/xsdlib/ChangeLog,v 1.13 2007/01/04 04:59:50 tgall Exp $
+
+  03 Jan 2007; Tom Gall <tgall@gentoo.org> xsdlib-20050627.ebuild:
+  stable on ppc64
 
   09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
   xsdlib-20050627-r1.ebuild:
