@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/msv
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/msv/ChangeLog,v 1.10 2006/12/09 09:22:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/msv/ChangeLog,v 1.11 2007/01/04 05:00:29 tgall Exp $
+
+  03 Jan 2007; Tom Gall <tgall@gentoo.org> msv-20050627.ebuild:
+  stable on ppc64
 
   09 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> msv-20050627-r1.ebuild:
   Add ~x86-fbsd keyword.
